Fix alignment in homepage

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -47,3 +47,7 @@
 #bestsellers{
   margin-top: 15px;
 }
+
+#authors {
+  text-align: left;
+}
